--- a/index.html
+++ b/index.html
@@ -430,5 +430,7 @@
     <script src="/js/jquery.inview.min.js"></script>
     <script src="/js/wow.min.js"></script>
     <script src="/js/custom-scripts.js"></script>
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 </html>
