--- a/partner.html
+++ b/partner.html
@@ -113,6 +113,12 @@
           <p>Apexcord is the perfect bot for Apex Legends players. The bot offers you: Player stats (kills,equipped skins,current rank & level etc.), Current Map Info, Game News, Random Loadouts & more</p>
         </div>
 
+        <div class="col-md-4 portfolio-item">
+          <a href="https://musicbotmelody.tk/"><img class="img-responsive" src="/images/melody.png"></a>
+          <h3><a href="https://musicbotmelody.tk/">Melody</a></h3>
+          <p>An advanced discord music bot, supports Spotify, Soundcloud, YouTube with Shuffling, Volume Control and Web Dashboard</p>
+        </div>
+
       </div>
 
 
