update patreon perks

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             </li>
                             <li>Previous Benefits</li>
                             <li>Tier II Supporter Role in our Discord Server</li>
-                            <li>Doubled Coins For Dailies</li>
+                            <li>Custom Image For Your Character</li>
                             <li class="plan-purchase"><a class="btn btn-primary" href="https://www.patreon.com/join/jasminebot/checkout?rid=7211832">Get It Now!</a></li>
                         </ul>
                     </div>
@@ -349,7 +349,7 @@
                             </li>
                             <li>Previous Benefits</li>
                             <li>Tier III Supporter Role in our Discord Server</li>
-                            <li>Custom Role in our Discord Server</li>
+                            <li>Doubled Coins For Dailies</li>
                             <li class="plan-purchase"><a class="btn btn-primary" href="https://www.patreon.com/join/jasminebot/checkout?rid=7211903">Get It Now!</a></li>
                         </ul>
                     </div>
