--- a/partner.html
+++ b/partner.html
@@ -107,6 +107,12 @@
           <p>Apexcord is the perfect bot for Apex Legends players. The bot offers you: Player stats (kills,equipped skins,current rank & level etc.), Current Map Info, Game News, Random Loadouts & more</p>
         </div>
 
+        <div class="col-md-4 portfolio-item">
+          <a href="https://dsc.gg/nose"><img class="img-responsive" src="/images/mrnose.jpg"></a>
+          <h3><a href="https://dsc.gg/nose">Mr.Nose</a></h3>
+          <p><strong>Features🛠</strong><br>🤣 <strong>Fun</strong> Commands<br>🪙 Economy <strong>Commands</strong>🖼️ <strong>Image</strong> <u>Generation</u> Commands<br>🏓 Moderation <u>Commands</u><br>🛠️ Utility <strong>Commands</strong><br><br><strong>Certifications</strong><br>✅ <strong>Approved</strong> by Top.gg<br>✅ <strong>Officially</strong> <u>verified</u> by <strong>Discord</strong></p>
+        </div>
+
       </div>
 
 
