--- a/invite.html
+++ b/invite.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Invite Me</title>
-      <meta http-equiv = "refresh" content = "2; url = https://discord.com/oauth2/authorize?client_id=636748567586930728&permissions=271625286&scope=bot" />
+      <meta http-equiv = "refresh" content = "2; url = https://discord.com/api/oauth2/authorize?client_id=867048396358549544&permissions=0&scope=bot" />
    </head>
    <body>
       <p>Redirecting...</p>
