--- a/partner.html
+++ b/partner.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jasmine partnership list of Discord Bots and Discord Servers, interested in partnering with Jasmine? Join our Discord server.">
+    <meta name="description" content="Kanna Coco partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna Coco? Join our Discord server.">
     <meta name="author" content="Mirabellier">
     <meta name="theme-color" content="#EE82EE">
-    <meta content="Jasmine | Partnership List" property="og:title">
-    <meta content="Jasmine partnership list of Discord Bots and Discord Servers, interested in partnering with Jasmine? Join our Discord server." property="og:description">
-    <meta content="Jasmine" property="og:site_name">
-    <meta content='https://www.jasminebot.xyz/favicon.jpg' property='og:image'>
+    <meta content="Kanna Coco | Partnership List" property="og:title">
+    <meta content="Kanna Coco partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna Coco? Join our Discord server." property="og:description">
+    <meta content="Kanna Coco" property="og:site_name">
+    <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="Jasmine">
+    <meta name="twitter:site" content="Kanna Coco">
     <meta name="twitter:creator" content="@mirabellierr">
-    <meta name="twitter:title" content="Jasmine | Partnership List">
-    <meta name="twitter:description" content="Jasmine partnership list of Discord Bots and Discord Servers, interested in partnering with Jasmine? Join our Discord server.">
-    <meta name="twitter:image" content="https://www.jasminebot.xyz/background.jpg">
+    <meta name="twitter:title" content="Kanna Coco | Partnership List">
+    <meta name="twitter:description" content="Kanna Coco partnership list of Discord Bots and Discord Servers, interested in partnering with Kanna Coco? Join our Discord server.">
+    <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
 
-    <title>Jasmine - Partnership</title>
+    <title>Kanna Coco - Partnership</title>
     <link rel="shortcut icon" href="/images/ico/favicon.ico"> 
 
     <!-- Bootstrap core CSS -->
@@ -38,16 +38,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-          <a class="navbar-brand" href="https://www.jasminebot.xyz"><img src="/images/logo2.jpg" alt="logo"></a>
-          <a class="navbar-brand" href="https://www.jasminebot.xyz">Jasmine</a>
+          <a class="navbar-brand" href="https://www.kannacoco.me"><img src="/images/logo2.jpg" alt="logo"></a>
+          <a class="navbar-brand" href="https://www.kannacoco.me">Kanna Coco</a>
         </div>
         <div class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
-              <li class="scroll"><a href="https://www.jasminebot.xyz">Home</a></li>  
-              <li class="scroll active"><a href="https://www.jasminebot.xyz/partner/">Partner</a></li>       
-              <li class="scroll"><a href="https://www.jasminebot.xyz/privacy/">Privacy</a></li>
-              <li class="scroll"><a href="https://discord.gg/s875Hry">Support Server</a></li>
-              <li class="scroll"><a href="https://discord.com/oauth2/authorize?client_id=636748567586930728&permissions=271625286&scope=bot">Invite Me</a></li>               
+              <li class="scroll"><a href="https://www.kannacoco.me">Home</a></li>  
+              <li class="scroll active"><a href="https://www.kannacoco.me/partner/">Partner</a></li>       
+              <li class="scroll"><a href="https://www.kannacoco.me/privacy/">Privacy</a></li>
+              <li class="scroll"><a href="https://www.kannacoco.me/support/">Support Server</a></li>
+              <li class="scroll"><a href="https://www.kannacoco.me/invite/">Invite Me</a></li>               
           </ul>
       </div>
       </div><!-- /.container -->
@@ -138,7 +138,7 @@
   
         <div class="col-md-4 portfolio-item">
             <a href="https://discord.gg/bK3beQD"><img class="img-responsive" src="/images/dragon.jpg"></a>
-            <h3><a href="https://discord.gg/bK3beQD">The Jasmine Dragon</a></h3>
+            <h3><a href="https://discord.gg/bK3beQD">The Kanna Coco Dragon</a></h3>
             <p>we are a avatar fandom! fun bots, memes! we also allow everyone! its also for gamers!</p>
         </div>
   
