--- a/privacy.html
+++ b/privacy.html
@@ -6,17 +6,17 @@
   <meta name="description" content="This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Bot and tells You about Your privacy rights.">
   <meta name="author" content="Mirabellier">
   <meta name="theme-color" content="#EE82EE">
-  <meta content="Jasmine | Privacy Policy" property="og:title">
+  <meta content="Kanna Coco | Privacy Policy" property="og:title">
   <meta content="This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Bot and tells You about Your privacy rights." property="og:description">
-  <meta content="Jasmine" property="og:site_name">
-  <meta content='https://www.jasminebot.xyz/favicon.jpg' property='og:image'>
+  <meta content="Kanna Coco" property="og:site_name">
+  <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="Jasmine">
+  <meta name="twitter:site" content="Kanna Coco">
   <meta name="twitter:creator" content="@mirabellierr">
-  <meta name="twitter:title" content="Jasmine | Privacy policy">
+  <meta name="twitter:title" content="Kanna Coco | Privacy policy">
   <meta name="twitter:description" content="This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Bot and tells You about Your privacy rights.">
-  <meta name="twitter:image" content="https://www.jasminebot.xyz/background.jpg">
-    <title>Jasmine - Privacy Policy</title>
+  <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
+    <title>Kanna Coco - Privacy Policy</title>
 	<!-- core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
@@ -42,16 +42,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://www.jasminebot.xyz"><img src="/images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="https://www.kannacoco.me"><img src="/images/logo.png" alt="logo"></a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li class="scroll"><a href="https://www.jasminebot.xyz">Home</a></li> 
-						<li class="scroll"><a href="https://www.jasminebot.xyz/partner/">Partner</a></li>
-                        <li class="scroll active"><a href="https://www.jasminebot.xyz/privacy/">Privacy</a></li>
-                        <li class="scroll"><a href="https://discord.gg/s875Hry">Support Server</a></li>
-                        <li class="scroll"><a href="https://discord.com/oauth2/authorize?client_id=636748567586930728&permissions=271625286&scope=bot">Invite Me</a></li>
+                        <li class="scroll"><a href="https://www.kannacoco.me">Home</a></li> 
+						<li class="scroll"><a href="https://www.kannacoco.me/partner/">Partner</a></li>
+                        <li class="scroll active"><a href="https://www.kannacoco.me/privacy/">Privacy</a></li>
+                        <li class="scroll"><a href="https://www.kannacoco.me/support/">Support Server</a></li>
+                        <li class="scroll"><a href="https://www.kannacoco.me/invite/">Invite Me</a></li>
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -72,9 +72,9 @@
                 <p class="wow fadeInDown">For the purposes of this Privacy Policy:</p>
                 <ul class="wow fadeInDown">
                   <li><strong>Account</strong> means a unique account created for you after you execute a start command using our Bot.</li>
-                  <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Jasmine.</li>
+                  <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Kanna Coco.</li>
                   <li><strong>Data</strong> is any information that relates to an identified or identifiable individual.</li>
-                  <li><strong>Bot</strong> refers to the Jasmine Discord bot.</li>
+                  <li><strong>Bot</strong> refers to the Kanna Coco Discord bot.</li>
                   <li><strong>User</strong> refers to your Discord account.</li>
                   <li><strong>Guild</strong> refers to your Discord server.</li>
                   <li><strong>You</strong> means the individual accessing or using the Bot.</li>
@@ -110,7 +110,7 @@
                 <p class="wow fadeInDown">If you have any questions about this Privacy Policy, concerns about Our Bot or want Your Data to get removed, You can contact us:</p>
                 <ul class="wow fadeInDown">
                   <li>By joining Our support server: https://discord.gg/s875Hry</li>
-                  <li>By contacting me via Discord: .ೃMιrαвєℓℓιєr⁀➷🌸#4623</li>
+                  <li>By contacting me via Discord: mira ❤ ✨#4623</li>
                 </ul>
               </div>
 		
