--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Support Server</title>
-      <meta http-equiv = "refresh" content = "2; url = https://discord.gg/s875Hry" />
+      <meta http-equiv = "refresh" content = "2; url = https://discord.gg/NcPeGuNEdc" />
    </head>
    <body>
       <p>Redirecting...</p>
