--- a/dchu.html
+++ b/dchu.html
@@ -6,17 +6,17 @@
   <meta name="description" content="Just for dchu">
   <meta name="author" content="Mirabellier">
   <meta name="theme-color" content="#EE82EE">
-  <meta content="Jasmine | Dchu" property="og:title">
+  <meta content="Kanna Coco | Dchu" property="og:title">
   <meta content="Just for dchu" property="og:description">
-  <meta content="Jasmine" property="og:site_name">
-  <meta content='https://www.jasminebot.xyz/favicon.jpg' property='og:image'>
+  <meta content="Kanna Coco" property="og:site_name">
+  <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="Jasmine">
+  <meta name="twitter:site" content="Kanna Coco">
   <meta name="twitter:creator" content="@mirabellierr">
-  <meta name="twitter:title" content="Jasmine | Dchu">
+  <meta name="twitter:title" content="Kanna Coco | Dchu">
   <meta name="twitter:description" content="Just for dchu">
-  <meta name="twitter:image" content="https://www.jasminebot.xyz/background.jpg">
-    <title>Jasmine - Dchu</title>
+  <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
+    <title>Kanna Coco - Dchu</title>
 	<!-- core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
@@ -42,14 +42,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://www.jasminebot.xyz"><img src="/images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="https://www.kannacoco.me"><img src="/images/logo.png" alt="logo"></a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li class="scroll"><a href="https://www.jasminebot.xyz">Home</a></li> 
-						<li class="scroll"><a href="https://www.jasminebot.xyz/partner/">Partner</a></li>
-                        <li class="scroll"><a href="https://www.jasminebot.xyz/privacy/">Privacy</a></li>
+                        <li class="scroll"><a href="https://www.kannacoco.me">Home</a></li> 
+						<li class="scroll"><a href="https://www.kannacoco.me/partner/">Partner</a></li>
+                        <li class="scroll"><a href="https://www.kannacoco.me/privacy/">Privacy</a></li>
                         <li class="scroll"><a href="https://discord.gg/s875Hry">Support Server</a></li>
                         <li class="scroll"><a href="https://discord.com/oauth2/authorize?client_id=636748567586930728&permissions=271625286&scope=bot">Invite Me</a></li>
                     </ul>
