remove some partnerships and change the discord server invite

--- a/privacy.html
+++ b/privacy.html
@@ -109,7 +109,7 @@
                 <h2 class="wow fadeInDown">Contact Us</h2>
                 <p class="wow fadeInDown">If you have any questions about this Privacy Policy, concerns about Our Bot or want Your Data to get removed, You can contact us:</p>
                 <ul class="wow fadeInDown">
-                  <li>By joining Our support server: https://discord.gg/s875Hry</li>
+                  <li>By joining Our support server: https://discord.gg/NcPeGuNEdc</li>
                   <li>By contacting me via Discord: mira ❤ ✨#4623</li>
                 </ul>
               </div>
