update privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -6,17 +6,17 @@
   <meta name="description" content="This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Bot and tells You about Your privacy rights.">
   <meta name="author" content="Mirabellier">
   <meta name="theme-color" content="#EE82EE">
-  <meta content="Kanna Coco | Privacy Policy" property="og:title">
+  <meta content="Kanna ✨ | Privacy Policy" property="og:title">
   <meta content="This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Bot and tells You about Your privacy rights." property="og:description">
-  <meta content="Kanna Coco" property="og:site_name">
+  <meta content="Kanna ✨" property="og:site_name">
   <meta content='https://www.kannacoco.me/favicon.jpg' property='og:image'>
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="Kanna Coco">
+  <meta name="twitter:site" content="Kanna ✨">
   <meta name="twitter:creator" content="@mirabellierr">
-  <meta name="twitter:title" content="Kanna Coco | Privacy policy">
+  <meta name="twitter:title" content="Kanna ✨ | Privacy policy">
   <meta name="twitter:description" content="This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Bot and tells You about Your privacy rights.">
   <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
-    <title>Kanna Coco - Privacy Policy</title>
+    <title>Kanna ✨ - Privacy Policy</title>
 	<!-- core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
@@ -62,7 +62,7 @@
         <div class="container">
 		 <div class="section-header">
                 <h1 class="section-title wow fadeInDown">Privacy Policy</h1>
-                <p class="wow fadeInDown">Last updated: May 24, 2021</p>
+                <p class="wow fadeInDown">Last updated: August 25, 2021</p>
                 <p class="wow fadeInDown">This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Bot and tells You about Your privacy rights.</p>
                 <p class="wow fadeInDown">We use Your Data to provide and improve the Bot. By using the Bot, You agree to the collection and use of information in accordance with this Privacy Policy.</p>
                 <h2 class="wow fadeInDown">Interpretation and Definitions</h2>
@@ -72,9 +72,9 @@
                 <p class="wow fadeInDown">For the purposes of this Privacy Policy:</p>
                 <ul class="wow fadeInDown">
                   <li><strong>Account</strong> means a unique account created for you after you execute a start command using our Bot.</li>
-                  <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Kanna Coco.</li>
+                  <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to KannaCoco.</li>
                   <li><strong>Data</strong> is any information that relates to an identified or identifiable individual.</li>
-                  <li><strong>Bot</strong> refers to the Kanna Coco Discord bot.</li>
+                  <li><strong>Bot</strong> refers to the Kanna ✨ Discord bot.</li>
                   <li><strong>User</strong> refers to your Discord account.</li>
                   <li><strong>Guild</strong> refers to your Discord server.</li>
                   <li><strong>You</strong> means the individual accessing or using the Bot.</li>
@@ -82,23 +82,23 @@
                 <h2 class="wow fadeInDown">Collecting and Using Your Data</h2>
                 <h3 class="wow fadeInDown">Types of Data Collected</h3>
                 <h4 class="wow fadeInDown"><br>User Information</h4>
-                <p class="wow fadeInDown">While using Our Bot, We may automatically collect Your User information such as your tag, your username, your user ID and etc to provide Us with certain personally identifiable information that can be used to contact or identify You via Discord and for the functionality of certain commands.</p>
+                <p class="wow fadeInDown">While using Our Bot, We may automatically collect your User information such as your User ID to provide Us with certain personally identifiable information that can be used to contact or identify You and for the functionality of certain commands.</p>
                 <h4 class="wow fadeInDown"><br>Guild Information</h4>
-                <p class="wow fadeInDown">While using Our Bot, We may automatically collect your Guild information such as the name, the owner, member count and etc that can be used to identify and for the functionality of certain commands.</p>
+                <p class="wow fadeInDown">While using Our Bot, We may automatically collect your Guild information such as your Guild ID that can be used to identify and for the functionality of certain commands.</p>
                 <h2 class="wow fadeInDown">Use of Your Data</h2>
                 <p class="wow fadeInDown">The Company may use the Data for the following purposes:</p>
                 <ul class="wow fadeInDown">
                   <li><strong>To provide and maintain Our Bot</strong>, including caching the Guild and User information.</li>
-                  <li><strong>To manage Your Account</strong>: to manage Your registration as a user of the Bot. The Data You provide can give You access to different functionalities of the Bot that are available to You as a registered user and for the Bot to indentify You when You are using Our economy game system.</li>
+                  <li><strong>To manage your Account</strong>: to manage your registration as a user of the Bot. The Data You provide can give You access to different functionalities of the Bot that are available to You as a registered user and for the Bot to indentify You when You are using Our Bot commands.</li>
                   <li><strong>To contact You</strong>: via Discord only if necessary.</li>
-                  <li><strong>To provide You</strong> with general information such as Your Guild information and Your User information.</li>
-                  <li><strong>For other purposes</strong>: We may use Your information for other purposes, such as data analysis, identifying errors, determining the effectiveness of our Bot commands and to evaluate and improve our Bot, products, services, and your experience.</li>
+                  <li><strong>To provide You</strong> with general information such as your Guild information and your User information.</li>
+                  <li><strong>For other purposes</strong>: We may use your information for other purposes, such as data analysis, identifying errors, determining the effectiveness of our Bot commands and to evaluate and improve our Bot, products, services, and your experience.</li>
                 </ul>
-                <p class="wow fadeInDown">We do not share Your information to any other platforms.</p>
+                <p class="wow fadeInDown">We do not share your information to any other platforms.</p>
                 <h2 class="wow fadeInDown">Retention of Your Data</h2>
-                <p class="wow fadeInDown">The Company will retain Your Data only for as long as is necessary for the purposes set out in this Privacy Policy.</p>
+                <p class="wow fadeInDown">The Company will retain your Data only for as long as is necessary for the purposes set out in this Privacy Policy.</p>
                 <h2 class="wow fadeInDown">Security of Your Data</h2>
-                <p class="wow fadeInDown">The security of Your Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to protect Your Data, We cannot guarantee its absolute security.</p>
+                <p class="wow fadeInDown">The security of your Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to protect your Data, We cannot guarantee its absolute security.</p>
                 <h2 class="wow fadeInDown">Links to Other Websites</h2>
                 <p class="wow fadeInDown">Our Bot may contain links to other websites that are not operated by Us. If You click on a third party link, You will be directed to that third party's site. We strongly advise You to review the Privacy Policy of every site You visit.</p>
                 <p class="wow fadeInDown">We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
