--- a/partner.html
+++ b/partner.html
@@ -99,6 +99,12 @@
         </div>
   
         <div class="row">
+
+          <div class="col-md-4 portfolio-item">
+            <a href="https://discord.gg/b4gsGBGzfe"><img class="img-responsive" src="/images/MEHost.jpg"></a>
+            <h3><a href="https://discord.gg/b4gsGBGzfe">MEHost</a></h3>
+            <p>Looking for some Discord bot hosting without paying anything? or webhost / mc hosting with cheap pricing? Meet MEhost. MEhost is a host created by a group of people who are passionate to provide customers 24/7 hosting without cost. And our support team works around the clock to provide you fast support for the service.<br><br>>> 24/7 discord bot, web, mc hosting<br>>> Free of charge forever, no trial, no ads<br>>>  Easy to use wisp and directadmin panel<br>>> I7 powered for MC<br>>> AMD EPYC powered for bots<br><br>Join now at: https://discord.gg/b4gsGBGzfe<br>*T&C apply, Free of charge only exists to basic plan for discord bot hosting.</p>
+          </div>
   
         </div>
   
