update about background

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading">[🎮] level</h4>
-                                <p>background, <br>leaderboard, <br>level</p>
+                                <p>background, <br>level</p>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -149,7 +149,7 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading">[👹] rpg</h4>
-                                <p>bag, battle, equip, images, info, market, profile, redirect, setimage, setname, start, topstar, train</p>
+                                <p>bag, battle, equip, images, info, market, profile, redirect, setimage, setname, start, leaderboard, train</p>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -244,6 +244,7 @@
 
   
  <section id="about">
+     <div class="background">
         <div class="container">
 
             <div class="section-header">
@@ -272,6 +273,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </section><!--/#about-->
 
     <section id="pricing">
