--- a/invite.html
+++ b/invite.html
@@ -17,7 +17,7 @@
       <meta name="twitter:description" content="Provides a fun economy and RPG game where you can work every one hour to get coins, choose a character and battle with other users.">
       <meta name="twitter:image" content="https://www.kannacoco.me/background.jpg">
       <title>Invite Me</title>
-      <meta http-equiv = "refresh" content = "2; url = https://discord.com/api/oauth2/authorize?client_id=867048396358549544&permissions=0&scope=bot" />
+      <meta http-equiv = "refresh" content = "2; url = https://discord.com/api/oauth2/authorize?client_id=867048396358549544&permissions=0&scope=bot%20applications.commands" />
    </head>
    <body>
       <p>Redirecting...</p>
